# codex-gateway

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTEXT.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
src/codex_gateway/: __init__.py  _app_server_stdio_session.py  _codex_shared.py  _codex_turn_lifecycle.py  chat_contract.py  codex_client.py  protocol_compat.py  responses_contract.py  safety_policy.py  server.py  thread_lifetime.py
src/codex_openai_shim/: __init__.py  _app_server_stdio_session.py  _codex_shared.py  _codex_turn_lifecycle.py  chat_contract.py  codex_client.py  server.py
tests/: __init__.py  test_codex_client_unit.py  test_contract.py  test_protocol_compat.py  test_responses_contract.py  test_safety_policy.py  test_server_unit.py  test_thread_lifetime.py  test_turn_events.py
tests/support/: __init__.py  stdio_process.py
