[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-codex-shim"
version = "0.1.0"
description = "Local OpenAI-compatible FastAPI adapter for Codex app-server."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.104",
  "httpx>=0.25",
  "pydantic>=2",
  "uvicorn>=0.24",
]

[project.scripts]
codex-openai-shim = "codex_openai_shim.server:main"

[dependency-groups]
dev = [
  "openai>=1.3",
  "pre-commit>=3.6",
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.8",
]

[tool.pytest.ini_options]
markers = [
  "integration: tests that exercise live external processes or services",
]

[tool.ruff]
line-length = 120
src = ["src", "tests"]
target-version = "py311"
extend-exclude = ["generated"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
source = ["codex_openai_shim"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 95
